p2/confs/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
spec:
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 8080
